// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProfileInfoActions should render correctly for empty state 1`] = `
<Styled(AccountOverviewTile)
  className=""
>
  <div
    className="profile-wrapper elem-mb-XXXL"
  >
    <div
      className="profile-message"
    >
      <Styled(BodyCopy)
        className="elem-mb-MED"
        color="text.primary"
        component="p"
        data-locator="enhanceExpHdr"
        fontFamily="secondary"
        fontSize="fs16"
        fontWeight="extrabold"
        letterSpacing="normal"
        lineHeight="normal"
        link={null}
        textAlign="left"
      >
        lbl_profile_Enhance_Experience
      </Styled(BodyCopy)>
      <Styled(BodyCopy)
        className={null}
        color="text.primary"
        component="p"
        data-locator="instructionTxt"
        fontFamily="secondary"
        fontSize="fs16"
        fontWeight="regular"
        letterSpacing="normal"
        lineHeight="normal"
        link={null}
        textAlign="left"
      >
        lbl_profile_profileInCompleteMessage
      </Styled(BodyCopy)>
    </div>
  </div>
  <Styled(Row)
    fullBleed={true}
  >
    <Styled(Col)
      className="elem-mb-SM"
      colSize={
        Object {
          "large": 6,
          "medium": 4,
          "small": 3,
        }
      }
    >
      <Styled(ProfileInfoActionTile)
        activityCompletionState=""
        activityDescription="lbl_profile_mailingAddressDescription"
        activityIcon="/static/images/mailingAddress.jpg"
        activityId="mailingAddress"
        activityTitle="lbl_profile_mailingAddressActivityTitle"
        dataLocatorPrefix="email"
        redirectAsPath="/account/profile"
        redirectTo="/account?id=profile&subSection=edit-mailing-address"
      />
    </Styled(Col)>
    <Styled(Col)
      className="elem-mb-SM"
      colSize={
        Object {
          "large": 6,
          "medium": 4,
          "small": 3,
        }
      }
      ignoreGutter={
        Object {
          "large": true,
          "medium": true,
          "small": true,
        }
      }
    >
      <Styled(ProfileInfoActionTile)
        activityCompletionState=""
        activityDescription="lbl_profile_favStoreDescription"
        activityIcon="/static/images/store.png"
        activityId="favStore"
        activityTitle="lbl_profile_favStoreActivityTitle"
        dataLocatorPrefix="favStore"
        redirectTo="/account"
      />
    </Styled(Col)>
    <Styled(Col)
      className="elem-mb-SM"
      colSize={
        Object {
          "large": 6,
          "medium": 4,
          "small": 3,
        }
      }
    >
      <Styled(ProfileInfoActionTile)
        activityCompletionState=""
        activityDescription="lbl_profile_userBirthdayDescription"
        activityIcon="/static/images/birthday.jpg"
        activityId="userBirthday"
        activityTitle="lbl_profile_userBirthdayActivityTitle"
        dataLocatorPrefix="birthday"
        redirectAsPath="/account/profile"
        redirectTo="/account?id=profile&subSection=edit-personal-info"
      />
    </Styled(Col)>
    <Styled(Col)
      className="elem-mb-SM"
      colSize={
        Object {
          "large": 6,
          "medium": 4,
          "small": 3,
        }
      }
      ignoreGutter={
        Object {
          "large": true,
          "medium": true,
          "small": true,
        }
      }
    >
      <Styled(ProfileInfoActionTile)
        activityCompletionState=""
        activityDescription="lbl_profile_aboutYourselfDescription"
        activityIcon="/static/images/survey.png"
        activityId="aboutYourself"
        activityTitle="lbl_profile_surveyActivityTitle"
        dataLocatorPrefix="survey"
        noLink={true}
        onClick={[Function]}
        redirectAsPath=""
        redirectTo=""
      />
    </Styled(Col)>
  </Styled(Row)>
  <Styled(AboutYouSurveyModal)
    className=""
    labels={Object {}}
    openState={false}
    toggleModalState={[Function]}
    userSurvey={Immutable.List []}
  />
</Styled(AccountOverviewTile)>
`;

exports[`ProfileInfoActions should render correctly for filled state 1`] = `
<Styled(AccountOverviewTile)
  className=""
>
  <div
    className="profile-wrapper elem-mb-XXXL"
  >
    <div
      className="profile-message"
    >
      <Styled(BodyCopy)
        className="elem-mb-MED"
        color="text.primary"
        component="p"
        data-locator="enhanceExpHdr"
        fontFamily="secondary"
        fontSize="fs16"
        fontWeight="extrabold"
        letterSpacing="normal"
        lineHeight="normal"
        link={null}
        textAlign="left"
      >
        lbl_profile_Enhance_Experience
      </Styled(BodyCopy)>
      <Styled(BodyCopy)
        className={null}
        color="text.primary"
        component="p"
        fontFamily="secondary"
        fontSize="fs16"
        fontWeight="regular"
        letterSpacing="normal"
        lineHeight="normal"
        link={null}
        textAlign="left"
      >
        lbl_profile_profileCompletionExclamation
      </Styled(BodyCopy)>
      <Styled(BodyCopy)
        className={null}
        color="text.primary"
        component="p"
        data-locator="infoAddedTxt"
        fontFamily="secondary"
        fontSize="fs16"
        fontWeight="regular"
        letterSpacing="normal"
        lineHeight="normal"
        link={null}
        textAlign="left"
      >
        lbl_profile_profileCompletionMessage
      </Styled(BodyCopy)>
      <Styled(BodyCopy)
        className={null}
        color="text.primary"
        component="p"
        fontFamily="secondary"
        fontSize="fs16"
        fontWeight="regular"
        letterSpacing="normal"
        lineHeight="normal"
        link={null}
        textAlign="left"
      >
        lbl_profile_getMorePoints
        <Styled(Anchor)
          dataLocator="hereLink"
          fontSizeVariation="xlarge"
          to="/account"
          underline={true}
        >
          lbl_profile_getMorePointsLink
        </Styled(Anchor)>
        ?
      </Styled(BodyCopy)>
    </div>
    <div
      className="elem-pt-MED"
      data-locator="profileCompletionImg"
    >
      <Styled(ProfileProgress)
        className="elem-ml-LRG elem-mr-LRG"
        profileCompletion="100"
      />
    </div>
  </div>
  <Styled(Row)
    fullBleed={true}
  >
    <Styled(Col)
      className="elem-mb-SM"
      colSize={
        Object {
          "large": 6,
          "medium": 4,
          "small": 3,
        }
      }
    >
      <Styled(ProfileInfoActionTile)
        activityCompletionState="lbl_profile_profileActivityCompleted"
        activityDescription="lbl_profile_mailingAddressDescription"
        activityIcon="/static/images/mailingAddress.jpg"
        activityId="mailingAddress"
        activityTitle="lbl_profile_mailingAddressActivityTitle"
        dataLocatorPrefix="email"
        redirectAsPath="/account/profile"
        redirectTo="/account?id=profile&subSection=edit-mailing-address"
      />
    </Styled(Col)>
    <Styled(Col)
      className="elem-mb-SM"
      colSize={
        Object {
          "large": 6,
          "medium": 4,
          "small": 3,
        }
      }
      ignoreGutter={
        Object {
          "large": true,
          "medium": true,
          "small": true,
        }
      }
    >
      <Styled(ProfileInfoActionTile)
        activityCompletionState="lbl_profile_profileActivityCompleted"
        activityDescription="lbl_profile_favStoreDescription"
        activityIcon="/static/images/store.png"
        activityId="favStore"
        activityTitle="lbl_profile_favStoreActivityTitle"
        dataLocatorPrefix="favStore"
        redirectTo="/account"
      />
    </Styled(Col)>
    <Styled(Col)
      className="elem-mb-SM"
      colSize={
        Object {
          "large": 6,
          "medium": 4,
          "small": 3,
        }
      }
    >
      <Styled(ProfileInfoActionTile)
        activityCompletionState="lbl_profile_profileActivityCompleted"
        activityDescription="lbl_profile_userBirthdayDescription"
        activityIcon="/static/images/birthday.jpg"
        activityId="userBirthday"
        activityTitle="lbl_profile_userBirthdayActivityTitle"
        dataLocatorPrefix="birthday"
        redirectAsPath="/account/profile"
        redirectTo="/account?id=profile&subSection=edit-personal-info"
      />
    </Styled(Col)>
    <Styled(Col)
      className="elem-mb-SM"
      colSize={
        Object {
          "large": 6,
          "medium": 4,
          "small": 3,
        }
      }
      ignoreGutter={
        Object {
          "large": true,
          "medium": true,
          "small": true,
        }
      }
    >
      <Styled(ProfileInfoActionTile)
        activityCompletionState="lbl_profile_profileActivityCompleted"
        activityDescription="lbl_profile_aboutYourselfDescription"
        activityIcon="/static/images/survey.png"
        activityId="aboutYourself"
        activityTitle="lbl_profile_surveyActivityTitle"
        dataLocatorPrefix="survey"
        noLink={true}
        onClick={[Function]}
        redirectAsPath=""
        redirectTo=""
      />
    </Styled(Col)>
  </Styled(Row)>
  <Styled(AboutYouSurveyModal)
    className=""
    labels={Object {}}
    openState={false}
    toggleModalState={[Function]}
    userSurvey={
      Immutable.List [
        Immutable.List [
          "test",
        ],
        Immutable.List [
          "test",
        ],
      ]
    }
  />
</Styled(AccountOverviewTile)>
`;
